// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharedStatus component should display the link if there is a link 1`] = `
<div>
  <div
    class="CozyTheme--light-normal u-dc"
  >
    <span
      class="shared-status"
    >
      <svg
        currentItem="false"
        data-for="linkfor1"
        data-tip="true"
        height="16"
        style="fill: var(--iconTextColor);"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M8.88 3.88a1 1 0 1 1-1.415-1.415L9.053.877A2.998 2.998 0 0 1 13.29.876l1.18 1.18a2.998 2.998 0 0 1-.007 4.24L10.999 9.76c-1.535 1.535-4.07 1.583-5.534.12A1 1 0 1 1 6.88 8.465c.67.67 1.94.646 2.705-.119l3.465-3.464a.998.998 0 0 0 .006-1.413l-1.18-1.18a.998.998 0 0 0-1.408.003L8.88 3.88zm-2.415 7.585A1 1 0 1 1 7.88 12.88l-1.587 1.587a2.998 2.998 0 0 1-4.237.002l-1.18-1.18a2.998 2.998 0 0 1 .007-4.24l3.464-3.464c1.534-1.535 4.07-1.583 5.533-.12A1 1 0 1 1 8.465 6.88c-.67-.67-1.94-.646-2.705.119l-3.464 3.464a.998.998 0 0 0-.006 1.413l1.18 1.18a.998.998 0 0 0 1.407-.003l1.588-1.588z"
            id="link-1-path-1"
          />
        </defs>
        <use
          fill-rule="nonzero"
          xlink:href="#link-1-path-1"
        />
      </svg>
      <div
        class="__react_component_tooltip place-bottom type-dark "
        data-id="tooltip"
        id="linkfor1"
      >
        <span>
          Shared by link
        </span>
      </div>
    </span>
  </div>
</div>
`;

exports[`SharedStatus component should have the right display if there is several recipients 1`] = `
<div>
  <div
    class="CozyTheme--light-normal u-dc"
  >
    <span
      class="shared-status"
    >
      <a
        class="shared-status-label"
        currentitem="false"
        data-for="members1"
        data-tip="true"
      >
        2 members
      </a>
      <div
        class="__react_component_tooltip place-bottom type-dark "
        data-id="tooltip"
        id="members1"
      >
        <ul
          class="shared-tooltip-list"
        >
          <li>
            1
          </li>
          <li>
            2
          </li>
        </ul>
      </div>
    </span>
  </div>
</div>
`;

exports[`SharedStatus component should just render a span if no sharing 1`] = `
<div>
  <div
    class="CozyTheme--light-normal u-dc"
  >
    <span
      class="shared-status"
    />
  </div>
</div>
`;
